fix: height on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -662,11 +662,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-h-\[98vh\] {
   max-height: 98vh;
 }
+.max-h-\[90vh\] {
+  max-height: 90vh;
+}
 .min-h-screen {
   min-height: 100vh;
 }
 .min-h-85vh {
   min-height: 85vh;
+}
+.min-h-\[100vh\] {
+  min-height: 100vh;
 }
 .w-5 {
   width: 1.25rem;
@@ -1294,6 +1300,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-2 {
   padding: 0.5rem;
 }
+.p-\[30px\] {
+  padding: 30px;
+}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1341,6 +1350,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.py-\[30px\] {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .pl-2 {
   padding-left: 0.5rem;
@@ -2198,6 +2211,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:flex {
     display: flex;
+  }
+
+  .md\:max-h-\[98vh\] {
+    max-height: 98vh;
   }
 
   .md\:max-w-xs {
